<resources>
    <string name="app_name">HealthyAir</string>
    <string name="tvLogin">Prueba de Branch Login</string>
    <string name="nombreApp">Healthy Air</string>
    <string name="msg_inicial">Enjoy Madrid</string>
    <string name="username">\tUsername</string>
    <string name="password">\tPassword</string>
    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="tv_olvidar">¿Has olvidado tu contraseña?</string>
    <string name="tv_pulse">- PULSA AQUÍ -</string>

    <string name="msg_registrado">Ususario Registrado</string>
    <string name="msg_no_registrado">Usuario no registrado</string>
    <string name="msg_no_accede">Error de acceso.</string>
    <string name="no_datos">Debe introducir el email y la password.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_omitir">omitir</string>
    <string name="btn_atras"><![CDATA[<]]></string>
    <string name="btn_avanzar"><![CDATA[>]]></string>
    <string name="tv_tips_contam">Algunos tips sobre contaminación</string>
    <string name="tv_tip1">\tEvita salir a la calle los días de mayor \n\tcontaminación</string>
    <string name="tv_tip2">\tLos días de más contaminación puedes usar \n\tmascarilla si tienes problemas respiratorios</string>
    <string name="tv_tip3">\tEvita hacer deporte al aire libre mientras \n\thaya alertas por contaminación</string>
    <string name="tv_tip4">\tUtiliza bicicleta o el transporte público en la \n\tmedida de lo posible</string>
    <string name="tv_tip5">\tPor cada grado de temperatura aumentan \n\tlas emisiones de gases un 7%</string>
    <string name="tv_tip6">\tLos niños y ancianos son especialmente \n\tvulnerables a la contaminación</string>
    <string name="tv_tip7">\tSi estás embarazada, procura llevar mascarilla \n\tlos días de mayor alerta</string>
    <string name="tv_tip8">\tRespeta las restricciones de velocidad y acceso \n\tde vehículos a zonas centrales</string>
    <string name="tv_tip9">\tCierra la llave de la calefacción en las \n\thabitaciones que no utilices</string>
    <string name="tv_tip10">\tVentila la casa en la hora en que la \n\ttemperatura es más favorable</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Escenarios/Normativa</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nav_header_nameUser">User Name</string>
    <string name="nav_header_mailUser">xxxxx@xxx.com</string>
    <string name="menu_normative">Normativa</string>
    <string name="menu_contaminantes">Componentes del aire</string>
    <string name="btn_normativa_saber_mas">Saber más</string>
    <string name="action_acerca_de">Acerca de HealthyAir</string>


    <string name="nombre_desarrollador_1">Carlos Pardos</string>
    <string name="descripcion_desarrollador_1">Software developer, Clour Master, Tester and Apprentice of the team</string>

    <string name="nombre_desarrollador_2">Luis Fernández</string>
    <string name="descripcion_desarrollador_2">CEO, Software developer, Analyst and Master Designer</string>

    <string name="nombre_desarrollador_3">Ricardo Gutierrez</string>
    <string name="descripcion_desarrollador_3">Software developer, Technical assistant and Junior Designer </string>
    <string name="texto_desc_app">HealthyAir\n Universidad Europea de Madrid\nMadrid 2020</string>
    <string name="menu_marcadores">Estaciones</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_estaciones">Estaciones</string>
    <string name="nav_datos_reales">Datos en tiempo real</string>
    <string name="menu_datos_reales">Datos en tiempo real</string>


    <string name="tv_provincia">Provincia: %s</string>
    <string name="tv_municipio">Municipio: %s</string>
    <string name="tv_estacion">Estación: %s</string>
    <string name="tv_fecha">Fecha: %1$s/%2$s/%3$s</string>
    <string name="tv_muestreo">Punto de Muestreo: %s</string>
    <string name="tv_magnitud">Código Magnitud: %s</string>
    <string name="tv_nivel8am">Nivel 8h a.m.: %s</string>
    <string name="tv_nivel16pm">Nivel 16h p.m.: %s</string>
    <string name="tv_nivel24pm">Nivel 24h p.m.: %s</string>

    <!--<string name="tv_provinciaV">Provincia: </string>
    <string name="tv_municipioV">Municipio: </string>
    <string name="tv_estacionV">Estación: </string>
    <string name="tv_fechaV">Fecha: </string>
    <string name="tv_muestreoV">Muestreo: </string>
    <string name="tv_magnitudV">Magnitud: </string>
    <string name="tv_nivel8amV">Nivel 8h a.m.: </string>
    <string name="tv_nivel16pmV">Nivel 16h p.m.: </string>
    <string name="tv_nivel24pmV">Nivel 24h p.m.: </string>-->

    <string name="text_fragment_datos_reales">Información en tiempo real:</string>


</resources>
