<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.riluca.healthyair.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_normativa"
        android:name="com.riluca.healthyair.ui.normative.NormativeFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_normative" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.riluca.healthyair.ui.contaminantes.ContFragment"
        android:label="@string/menu_contaminantes"
        tools:layout="@layout/fragment_contaminantes" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.riluca.healthyair.ui.Estaciones.EstacionesFragment"
        android:label="@string/menu_estaciones"
        tools:layout="@layout/fragment_estaciones" />

    <fragment
        android:id="@+id/nav_datos_reales"
        android:name="com.riluca.healthyair.ui.datosReales.RealDatosFragment"
        android:label="@string/menu_datos_reales"
        tools:layout="@layout/fragment_realdatos" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.riluca.healthyair.ui.madrid.WebMadridFragment"
        android:label="@string/menu_cam"
        tools:layout="@layout/fragment_web_madrid" />

    <fragment
        android:id="@+id/nav_log_out"
        android:name="com.riluca.healthyair.ui.logOut.LogOutFragment"
        android:label="@string/menu_log_out"
        tools:layout="@layout/fragment_log_out" />
</navigation>