<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragTip2"
    tools:context=".TipsFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            android:src="@drawable/tips1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="363dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/imageView1"
            app:layout_constraintBottom_toTopOf="@id/btnOmitir"
            android:src="@drawable/placasdgt" />

        <Button
            android:id="@+id/btnAtras"
            style="@style/buttonTips"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnOmitir"
            android:text="@string/btn_atras" />

        <Button
            android:id="@+id/btnOmitir"
            style="@style/buttonTips"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnAtras"
            app:layout_constraintEnd_toStartOf="@id/btnAvanzar"
            android:text="@string/btn_omitir" />

        <Button
            android:id="@+id/btnAvanzar"
            style="@style/buttonTips"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnOmitir"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:text="@string/btn_avanzar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>